--- a/style.css
+++ b/style.css
@@ -1,27 +1,133 @@
 html{
-background-color: black;
-color: black;
-margin: 0;
+background-color: gray;
 height: 100%;
 }
 
-body{
-    margin-right: 5%;
-    margin-left: 5%;
+.container{
+    display: grid;
+    border: 1px solid white;
+    grid-template-rows: auto;
+    grid-template-columns: auto;
     background-color: white;
-    height: 100%;
+}
+nav{
+    background-color: burlywood;
 }
 
-p{
-    text-align: center;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin-bottom: 0;
+.A{
+    grid-area: 1;
+    grid-column: 5/6;
+    grid-row: 1/2;
+}
+.B{
+    grid-area: 2;
+    grid-column: 5/6;
+    grid-row: 2/3;
+}
+.C{
+    grid-area: 3;
+    grid-column: 5/6;
+    grid-row: 3/5;
+}
+.D{
+    grid-area: 4;
+    grid-column: 1/3;
+    grid-row: 5/9;
+}
+.E{
+    grid-area: 5;
+    grid-column: 3/4;
+    grid-row: 5/9;
+}
+.F{
+    grid-area: 6;
+    grid-column: 4/5;
+    grid-row: 5/9;
+}
+.G{
+    grid-area: 7;
+    grid-column: 5/6;
+    grid-row: 5/9;
+}
+.H{
+    grid-area: 8;
+    grid-column: 1/2;
+    grid-row: 9/13;
+}
+.I{
+    grid-area: 9;
+    grid-column: 2/4;
+    grid-row: 9/11;
+}
+.J{
+    grid-area: 10;
+    grid-column: 4/5;
+    grid-row: 9/11;
+}
+.K{
+    grid-area: 11;
+    grid-column: 5/6;
+    grid-row: 9/11;
+}
+.L{
+    grid-area: 12;
+    grid-column: 1/2;
+    grid-row: 12/13;
+    margin-top: 53px;
+}
+.M{
+    grid-area: 13;
+    grid-column: 2/3;
+    grid-row: 11/13;
+}
+.N{
+    grid-area: 14;
+    grid-column: 3/5;
+    grid-row: 11/12;
+}
+.O{
+    grid-area: 15;
+    grid-column: 5/6;
+    grid-row: 11/12;
+}
+.P{
+    grid-area: 16;
+    grid-column: 3/4;
+    grid-row: 12/13;
+}
+.Q{
+    grid-area: 17;
+    grid-column: 4/5;
+    grid-row: 12/13;
+}
+.R{
+    grid-area: 18;
+    grid-column: 5/6;
+    grid-row: 12/13;
+    
+}
+.S{
+    grid-area: 19;
+    grid-column: 1/2;
+    grid-row: 13/15;
+}
+.T{
+    grid-area: 20;
+    grid-column: 2/4;
+    grid-row: 13/15;
+}
+.item-V{
+    grid-area: 22;
+    grid-column: 5/6;
+    grid-row: 14/15;
+    color: brown;
+    margin-left: 100px;
+    text-align: end;
+}
+.U{
+    grid-area: 21;
+    grid-column: 1/5;
+    grid-row: 1/5;
 }
 
-h1{
-    text-align: center;
-    margin-top: 0;
-    padding-top: 30px;
-    font-size: 3em;
-}
+
